Fix overflow

--- a/public/styles/content.css
+++ b/public/styles/content.css
@@ -7,6 +7,8 @@
 html,
 body {
   height: 100%;
+  overflow: auto;
+  overscroll-behavior: contain;
 }
 
 body {
